math-core/tests/snapshots/conversion_test__simple_accent.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\dot{x}"
---
<math>
    <mover accent="true">
        <mi>x</mi>
        <mo>˙</mo>
    </mover>
</math>
