math-core/tests/snapshots/conversion_test__simple_fraction.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\frac{1}{2}"
---
<math>
    <mfrac>
        <mn>1</mn>
        <mn>2</mn>
    </mfrac>
</math>
