math-core/tests/snapshots/conversion_test__simple_overset.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\overset{n}{X}"
---
<math>
    <mover>
        <mi>X</mi>
        <mi>n</mi>
    </mover>
</math>
