math-core/tests/snapshots/conversion_test__sine_at_group_end.snap
---
source: math-core/tests/conversion_test.rs
expression: "{x\\sin}x"
---
<math>
    <mrow>
        <mi>x</mi>
        <mo lspace="0.1667em" rspace="0">sin</mo>
    </mrow>
    <mi>x</mi>
</math>
