math-core/tests/snapshots/conversion_test__sine_at_group_start.snap
---
source: math-core/tests/conversion_test.rs
expression: "x{\\sin x}"
---
<math>
    <mi>x</mi>
    <mrow>
        <mo lspace="0" rspace="0.1667em">sin</mo>
        <mi>x</mi>
    </mrow>
</math>
