math-core/tests/snapshots/conversion_test__sine_at_left.snap
---
source: math-core/tests/conversion_test.rs
expression: "x\\left(\\sin x\\right)"
---
<math>
    <mi>x</mi>
    <mrow>
        <mo>(</mo>
        <mrow>
            <mo lspace="0" rspace="0.1667em">sin</mo>
            <mi>x</mi>
        </mrow>
        <mo>)</mo>
    </mrow>
</math>
