math-core/tests/snapshots/conversion_test__sine_at_right.snap
---
source: math-core/tests/conversion_test.rs
expression: "x\\left(x\\sin \\right)x"
---
<math>
    <mi>x</mi>
    <mrow>
        <mo>(</mo>
        <mrow>
            <mi>x</mi>
            <mo lspace="0.1667em" rspace="0">sin</mo>
        </mrow>
        <mo>)</mo>
    </mrow>
    <mi>x</mi>
</math>
